# aoc

./: README.md  aoc.cabal  new_day.sh
2020/Day05/: Main.hs  aoc2020Day05.cabal
2020/Day05/src/: Aoc2020Day05.hs  Main.hs
2020/Day05/test/: Aoc2020Day05Spec.hs
2020/Day06/: Main.hs  aoc2020Day06.cabal
2020/Day06/src/: Aoc2020Day06.hs
2020/Day06/test/: Aoc2020Day06Spec.hs
2020/Day07/: Main.hs  aoc2020Day07.cabal
2020/Day07/src/: Aoc2020Day07.hs
2020/Day07/test/: Aoc2020Day07Spec.hs
2020/Day10/: Main.hs  aoc2020Day10.cabal
2020/Day10/src/: Aoc2020Day10.hs
2020/Day10/test/: Aoc2020Day10Spec.hs
2020/Day11/: Main.hs  aoc2020Day11.cabal
2020/Day11/src/: Aoc2020Day11.hs
2020/Day11/test/: Aoc2020Day11Spec.hs
2020/Day12/: Main.hs  aoc2020Day12.cabal  stack.yaml
2020/Day12/src/: Aoc2020Day12.hs
2020/Day12/test/: Aoc2020Day12Spec.hs
2020/Day15/: Main.hs  aoc2020Day15.cabal
2020/Day15/src/: Aoc2020Day15.hs
2020/Day15/test/: Aoc2020Day15Spec.hs
2020/Day17/: Main.hs  aoc2020Day17.cabal
2020/Day17/src/: Aoc2020Day17.hs
2020/Day17/test/: Aoc2020Day17Spec.hs
2020/Day18/: LICENSE  Main.hs  aoc2020Day18.cabal  stack.yaml
2020/Day18/src/: Aoc2020Day18.hs
2020/Day18/test/: Aoc2020Day18Spec.hs
template/: Main.hs  aocYYYYDayDD.cabal  stack.yaml
template/src/: AocYYYYDayDD.hs
template/test/: AocYYYYDayDDSpec.hs
