name:                aoc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Entze/aoc#readme
license:             BSD3
license-file:        LICENSE
author:              Lukas Grassauer
maintainer:          lukas@grassauer.eu
copyright:           2019 Lukas Grassauer
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable aoc2020Day05
  hs-source-dirs:     2020/Day05/src
  main-is:            Main.hs
  default-language:   Haskell2010
  other-modules:      Aoc2020Day05
  build-depends:      base >= 4.7 && < 5,
                      safe >= 0.3 && < 1

test-suite aoc2020Day05Spec
  type:               exitcode-stdio-1.0
  ghc-options:        -Wall
  main-is:            Aoc2020Day05Spec.hs
  hs-source-dirs:     2020/Day05/test
  other-modules:      Aoc2020Day05
  build-depends:      base >= 4.7 && < 5,
                      hspec >= 2.7 && <3,
                      hspec-core >= 2.7 && <3,
                      QuickCheck >= 2.13 && <3,
                      leancheck >= 0.9 && <1,
                      hspec-leancheck >= 0.0.4 && < 1
  default-language:   Haskell2010



executable aoc2020Day06
  hs-source-dirs:     2020/Day06/src
  main-is:            Main.hs
  default-language:   Haskell2010
  other-modules:      Aoc2020Day06
  build-depends:      base >= 4.7 && < 5,
                      safe >= 0.3 && < 1,
                      split >= 0.2 && < 1

test-suite aoc2020Day06Spec
  type:               exitcode-stdio-1.0
  ghc-options:        -Wall
  main-is:            Aoc2020Day06Spec.hs
  hs-source-dirs:     2020/Day06/test
  other-modules:      Aoc2020Day06
  build-depends:      base >= 4.7 && < 5,
                      hspec >= 2.7 && <3,
                      hspec-core >= 2.7 && <3,
                      QuickCheck >= 2.13 && <3,
                      leancheck >= 0.9 && <1,
                      hspec-leancheck >= 0.0.4 && < 1,
                      aoc2020Day06
  default-language:   Haskell2010
