name:                aoc2020Day06
version:             1.0.0.0
-- synopsis:
-- description:
license:             BSD3
author:              Lukas Grassauer
build-type:          Simple
maintainer:          lukas@grassauer.eu
copyright:           2020 Lukas Grassauer
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Aoc2020Day06
  build-depends:       base >= 4.7 && < 5,
                       safe >= 0.3 && < 1,
                       split >= 0.2 && < 1

executable aoc2020Day06
  main-is:            Main.hs
  default-language:   Haskell2010
  build-depends:      base >= 4.7 && < 5,
                      aoc2020Day06

test-suite aoc2020Day06Spec
  type:               exitcode-stdio-1.0
  ghc-options:        -Wall
  main-is:            Aoc2020Day06Spec.hs
  hs-source-dirs:     test
  build-depends:      base >= 4.7 && < 5,
                      hspec >= 2.7 && <3,
                      hspec-core >= 2.7 && <3,
                      QuickCheck >= 2.13 && <3,
                      leancheck >= 0.9 && <1,
                      hspec-leancheck >= 0.0.4 && < 1,
                      aoc2020Day06
  default-language:   Haskell2010
