name:                aoc2020Day07
version:             1.0.0.0
-- synopsis:
-- description:
license:             BSD3
author:              Lukas Grassauer
build-type:          Simple
maintainer:          lukas@grassauer.eu
copyright:           2020 Lukas Grassauer
cabal-version:       >=1.10

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  exposed-modules:    Aoc2020Day07
  build-depends:      base >= 4.7 && < 5,
                      safe >= 0.3 && < 1,
                      regex-tdfa,
                      containers >= 0.6 && < 1

executable aoc2020Day07
  main-is:            Main.hs
  default-language:   Haskell2010
  build-depends:      base >= 4.7 && < 5,
                      aoc2020Day07

test-suite aoc2020Day07Spec
  type:               exitcode-stdio-1.0
  ghc-options:        -Wall
  main-is:            Aoc2020Day07Spec.hs
  hs-source-dirs:     test
  build-depends:      base >= 4.7 && < 5,
                      hspec >= 2.7 && <3,
                      hspec-core >= 2.7 && <3,
                      QuickCheck >= 2.13 && <3,
                      leancheck >= 0.9 && <1,
                      hspec-leancheck >= 0.0.4 && < 1,
                      safe >= 0.3 && < 1,
                      containers >= 0.6 && < 1,
                      aoc2020Day07
  default-language:   Haskell2010
